changes in server and client
Co-Authored-By: Alberto Bendayan <108437189+alberbendayan@users.noreply.github.com>
Co-Authored-By: Ben Deyheralde <108757682+bendeyhe@users.noreply.github.com>